// SPDX-FileCopyrightText: 2023 Jade Lovelace
//
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";
package clipper.embedding;

message TLSKeys {
    string label = 1;
    bytes client_random = 2;
    bytes secret = 3;
};

// New keys were received.
message NewKeysReq {
    oneof Keys {
        TLSKeys tls_keys = 1;
    };
};

message NewKeysResp {
    bool ok = 1;
};

// RPCs for sending stuff to the surrounding capture instance.
service ClipperEmbedding {
    rpc NewKeys(NewKeysReq) returns (NewKeysResp);
};
